# Shamell

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .gitleaks.toml  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.monolith.yml  docker-compose.yml  pytest.ini  requirements.txt
.cargo/: audit.toml
.github/: dependabot.yml
.github/scripts/: deploy_pi_smoke_guard.sh  staging_dast_smoke.sh
.github/workflows/: ci-cd-monolith.yml  ci.yml  cors-preflight-smoke.yml  deploy-agents.yml  deploy-bff.yml  deploy-bus.yml  deploy-food.yml  deploy-payments.yml  deploy-realestate.yml  deploy-stays.yml  deploy-taxi.yml  flutter-android-beta.yml  flutter-ios-beta.yml  staging-dast-smoke.yml  trusted-review-bot.yml
.semgrep/rules/: authz-idor.yml
NonWeChat/: cloud-init.rendered.yml  pytest.ini
NonWeChat/docs/: a11y_checklist_flutter.md  chat_threema_vertical.md  contributor_guide.md  courier_hardening.md  loadtest_plan.md  operations_runbook.md  payments_api_notes.md  performance_guide.md  privacy_compliance.md  shamell_monolith_overview.md  shamell_security_hardening.md  shamell_threat_model.md  testing_strategy.md
NonWeChat/ops/: deploy_pi.sh
NonWeChat/tests/: __init__.py  conftest.py  test_admin_permissions.py  test_admin_stats_endpoint.py  test_auth_otp_exposure.py  test_bff_courier.py  test_building_courier_link.py  test_building_materials_bff.py  test_bus_book_bff.py  test_bus_booking_authz.py  test_bus_history.py  test_cached_endpoints.py  test_call_signaling_ws_prod_disabled.py  test_device_login_db_persistence.py  test_device_login_demo_qr_local.py  test_e2e_scenarios.py  (+27 more)
apps/: __init__.py
crates_rs/shamell_common/: Cargo.toml
crates_rs/shamell_common/src/: host_guard.rs  internal_auth.rs  lib.rs  request_id.rs  secret_policy.rs  security_headers.rs
crates_rs/shamell_common/tests/: layers.rs
docs/: ci_cd_pipeline.md  doctors_flow.md  redpacket_campaigns_playbook.md
libs/shamell_shared/python/: README.md  pyproject.toml
libs/shamell_shared/python/shamell_shared/: __init__.py  cors.py  logging.py
libs/shamell_shared/python/shamell_shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: check_android_release_signing_env.sh  check_cors_hardening.sh  check_deploy_env_invariants.sh  check_flutter_ci_version_pinning.sh  check_flutter_http_timeouts.sh  check_flutter_record_platform_compat.sh  check_frontend_error_sanitization.sh  check_image_digest_pinning.sh  check_internal_port_exposure.py  check_internal_port_exposure.sh  check_ios_release_signing_env.sh  check_ios_webrtc_pod_lock_sync.sh  check_kotlin_webrtc_compat.sh  check_nginx_edge_hardening.sh  check_no_dev_plugin_registrations.sh  check_no_legacy_artifacts.py  check_no_legacy_artifacts.sh  check_no_payments_phone_routing.sh  check_no_raw_debug_logs.sh  check_no_runtime_panics.sh  check_no_secrets_in_urls.sh  check_rust_http_client_timeouts.sh  ci_account_create_profiles.sh  configure_account_create_attestation.sh  cors_preflight_smoke.sh  ensure_dev_proxy_cert.sh  iterate_100.sh  no_secrets_in_urls.allowlist  ops.sh  security_alert_webhook_drill.sh  security_events_report.sh  start_all_dashboard_proxies.sh  start_dashboard_dev_proxy.sh  sync_hetzner_nginx.sh  sync_hetzner_security_timer.sh  sync_hetzner_ufw.sh  update_cloudflare_ip_ranges.sh
services_rs/bff_gateway/: Cargo.toml  Dockerfile
services_rs/bff_gateway/src/: auth.rs  authz.rs  config.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs
services_rs/bus_service/: Cargo.toml  Dockerfile
services_rs/bus_service/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs
services_rs/chat_service/: Cargo.toml  Dockerfile
services_rs/chat_service/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs
services_rs/payments_service/: Cargo.toml  Dockerfile
services_rs/payments_service/src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  state.rs
tests/: __init__.py  conftest.py  test_admin_block_phone.py  test_admin_finance_stats.py  test_admin_guardrails_dashboard.py  test_admin_ids_for_phone.py  test_admin_permissions.py  test_admin_stats_endpoint.py  test_auth_phone_normalization.py  test_auth_session_db_persistence.py  test_bff_route_allowlist.py  test_building_orders_bff.py  test_bus_book_domain.py  test_bus_booking_authz.py  test_bus_internal_service_guards.py  test_cached_endpoints.py  test_carrental_book_bff.py  test_channels_creator_auth.py  test_chat_internal_service_guards.py  test_chat_ws_guardrails.py  test_csrf_guard.py  test_device_login_demo_disabled_in_prod.py  test_device_remove_revokes_sessions.py  test_dsr_endpoints.py  test_e2e_scenarios.py  test_error_detail_scrub_in_prod.py  test_internal_auto_mode_disabled_in_prod.py  test_internal_service_guards.py  test_livekit_call_token_authz.py  test_livekit_token_endpoint.py  test_logout_revokes_session.py  test_maintenance_mode.py  test_maps_push_fleet_guardrails.py  test_me_endpoints.py  test_me_journey_snapshot.py  test_metrics_ingest_guard.py  test_metrics_privacy.py  test_mobility_history.py  test_no_duplicate_routes.py  test_operator_endpoints.py  (+15 more)
(+422 files in other folders)
