[package]
name = "shamell_common"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
tower = "0.5"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
