[package]
name = "shamell_bff_gateway"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[dependencies]
axum = "0.7"
base64 = "0.22"
futures-util = "0.3"
hmac = "0.12"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

shamell_common = { path = "../../crates_rs/shamell_common", version = "0.1.0" }
