[package]
name = "shamell_bus_service"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
hex = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "postgres", "runtime-tokio-rustls", "uuid"] }
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

shamell_common = { path = "../../crates_rs/shamell_common", version = "0.1.0" }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
