[package]
name = "shamell_chat_service"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[dependencies]
axum = "0.7"
base64 = "0.22"
chrono = "0.4"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
futures-util = "0.3"
getrandom = "0.2"
hex = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["time"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

shamell_common = { path = "../../crates_rs/shamell_common", version = "0.1.0" }
