[package]
name = "shamell_payments_service"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
subtle = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }

shamell_common = { path = "../../crates_rs/shamell_common", version = "0.1.0" }
